# fieldforge

./: .env.example  .gitignore  FIELDFORGE_COMPLETE_SPECIFICATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/ai/: .env.example  Dockerfile  main.py  requirements.txt
apps/ai/app/: config.py
apps/ai/app/routes/: analytics.py  assistant.py  health.py  photo_estimation.py  scheduling.py
apps/api/: .env.example  Cargo.toml  Dockerfile  openapi.yaml
apps/api/src/: main.rs
apps/api/src/config/: mod.rs
apps/api/src/db/: repository.rs  seed.sql
apps/api/src/db/migrations/: 20240101000001_initial_schema.sql  20240101000002_gps_locations.sql
apps/api/src/errors/: mod.rs
apps/api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs
apps/api/src/models/: automation_rule.rs  checklist.rs  common.rs  customer.rs  document.rs  equipment.rs  estimate.rs  expense.rs  inventory.rs  invoice.rs  job.rs  license.rs  line_item.rs  message.rs  mod.rs  note.rs  payment.rs  photo.rs  property.rs  recurring_rule.rs  review.rs  service_plan.rs  tag.rs  team.rs  time_entry.rs  user.rs  vehicle.rs
apps/api/src/routes/: audit.rs  auth.rs  automation_rules.rs  checklists.rs  customers.rs  documents.rs  equipment.rs  estimates.rs  expenses.rs  fuel_logs.rs  gps.rs  health.rs  inventory.rs  invoices.rs  jobs.rs  licenses.rs  messages.rs  mod.rs  notes.rs  notifications.rs  payments.rs  photos.rs  portal.rs  properties.rs  purchase_orders.rs  recurring_rules.rs  reviews.rs  search.rs  service_plans.rs  stripe.rs  tags.rs  teams.rs  time_entries.rs  vehicles.rs  webhooks.rs  ws.rs
apps/api/src/services/: auth_service.rs  job_queue.rs  job_service.rs  mod.rs
apps/web/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: app.css  app.d.ts  hooks.server.ts
apps/web/src/lib/api/: client.ts  server.ts  services.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
apps/web/static/: robots.txt
infrastructure/terraform/: main.tf  terraform.tfvars.example
(+102 files in other folders)
