[package]
name = "fieldforge-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "FieldForge — Backend API for the universal job management platform for tradespeople"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit", "request-id", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# S3 storage
aws-sdk-s3 = "1"
aws-config = "1"

# HTTP client (for external APIs)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Stripe
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }

# Password & crypto
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
